Add example repository, its contract and database connection string configuration

--- a/TitlesOrganizer.Web/appsettings.json
+++ b/TitlesOrganizer.Web/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-TitlesOrganizer.Web-730df0ff-8ddf-4542-9564-b259fc927467;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=master;Trusted_Connection=True;"
   },
   "Logging": {
     "LogLevel": {
