--- a/TitlesOrganizer.Application/TitlesOrganizer.Application.csproj
+++ b/TitlesOrganizer.Application/TitlesOrganizer.Application.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <Folder Include="Interfaces\" />
+    <Folder Include="ViewModels\" />
     <Folder Include="Services\" />
   </ItemGroup>
 
