--- a/TitlesOrganizer.Application/TitlesOrganizer.Application.csproj
+++ b/TitlesOrganizer.Application/TitlesOrganizer.Application.csproj
@@ -13,6 +13,11 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="12.0.1" />
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\TitlesOrganizer.Domain\TitlesOrganizer.Domain.csproj" />
   </ItemGroup>
 
