--- a/TitlesOrganizer.Application/TitlesOrganizer - Backup.Application.csproj
+++ b/TitlesOrganizer.Application/TitlesOrganizer - Backup.Application.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
@@ -13,6 +13,10 @@
 
   <ItemGroup>
     <ProjectReference Include="..\TitlesOrganizer.Domain\TitlesOrganizer.Domain.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="ViewModels\Common\" />
   </ItemGroup>
 
 </Project>
