--- a/TitlesOrganizer.Web/TitlesOrganizer.Web.csproj
+++ b/TitlesOrganizer.Web/TitlesOrganizer.Web.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="bootstrap" Version="5.3.1" />
     <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="7.0.10" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="7.0.10" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="7.0.10" />
@@ -22,6 +23,11 @@
   <ItemGroup>
     <ProjectReference Include="..\TitlesOrganizer.Application\TitlesOrganizer.Application.csproj" />
     <ProjectReference Include="..\TitlesOrganizer.Infrastructure\TitlesOrganizer.Infrastructure.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="wwwroot\lib\bootstrap\dist\js\" />
+    <Folder Include="wwwroot\lib\bootstrap\dist\css\" />
   </ItemGroup>
 
 </Project>
