--- a/TitlesOrganizer.Application/TitlesOrganizer.Application.csproj
+++ b/TitlesOrganizer.Application/TitlesOrganizer.Application.csproj
@@ -7,6 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Folder Include="Validators\MovieValidators\" />
+    <Folder Include="Validators\TvSeriesValidators\" />
     <Folder Include="ViewModels\MovieVMs\" />
     <Folder Include="ViewModels\TvSeriesVMs\" />
   </ItemGroup>
@@ -15,7 +17,6 @@
     <PackageReference Include="AutoMapper" Version="12.0.1" />
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
     <PackageReference Include="FluentValidation" Version="11.7.1" />
-    <PackageReference Include="FluentValidation.AspNetCore" Version="11.3.0" />
     <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.7.1" />
   </ItemGroup>
 
