Upsert Book update

--- a/TitlesOrganizer.Web/TitlesOrganizer.Web.csproj
+++ b/TitlesOrganizer.Web/TitlesOrganizer.Web.csproj
@@ -58,4 +58,8 @@
     <ProjectReference Include="..\TitlesOrganizer.Infrastructure\TitlesOrganizer.Infrastructure.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Logs\" />
+  </ItemGroup>
+
 </Project>
