Refactoring view models

--- a/TitlesOrganizer.Application/TitlesOrganizer.Application.csproj
+++ b/TitlesOrganizer.Application/TitlesOrganizer.Application.csproj
@@ -7,9 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Validators\MovieValidators\" />
-    <Folder Include="Validators\TvSeriesValidators\" />
-    <Folder Include="ViewModels\BookVMs\Update\" />
+    <Folder Include="ViewModels\BookVMs\CommendVMs\UpdateReferencesVMs\" />
     <Folder Include="ViewModels\MovieVMs\" />
     <Folder Include="ViewModels\TvSeriesVMs\" />
   </ItemGroup>
