--- a/TitlesOrganizer.Application/TitlesOrganizer.Application.csproj
+++ b/TitlesOrganizer.Application/TitlesOrganizer.Application.csproj
@@ -7,7 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="ViewModels\BookVMs\CommendVMs\UpdateReferencesVMs\" />
+    <Folder Include="ViewModels\BookVMs\QueriesVMs\ReferencesVMs\ForGenreVMs\" />
+    <Folder Include="ViewModels\BookVMs\QueriesVMs\ReferencesVMs\ForSeriesVMs\" />
     <Folder Include="ViewModels\MovieVMs\" />
     <Folder Include="ViewModels\TvSeriesVMs\" />
   </ItemGroup>
